Started to implement Cryo into sEQE.py
Implementation of Connect buttons at the moment buggy, but the correct connections are found

--- a/GUI_V3.ui
+++ b/GUI_V3.ui
@@ -3391,7 +3391,7 @@
        <string>Cryostat</string>
       </property>
      </widget>
-     <widget class="QLabel" name="imageConnect_Cryo_2">
+     <widget class="QLabel" name="imageConnect_cryo">
       <property name="geometry">
        <rect>
         <x>600</x>
